# ModEngine2

./: .clang-format  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  Config.cmake.in  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
assets/debug_menu/font/: DSFont24.ccm  dbgfont14h.ccm
assets/debug_menu/testdata/: debugBootMenu.textlist
cmake/: ModEngineInstaller.cmake
config/: modengine.toml
dependencies/optick/: optick.config.h  optick.h  optick_capi.h  optick_core.cpp  optick_core.linux.h  optick_gpu.d3d12.cpp  optick_gpu.vulkan.cpp  optick_memory.h  optick_server.cpp
frontend/: App.xaml  App.xaml.cs  Game.cs  MainWindow.xaml  MainWindow.xaml.cs  frontend.csproj  frontend.sln
include/: README.md
include/modengine/: extension.h  extension_logger.h  game_type.h  hook.h  settings.h
include/modengine/util/: memory_scanner.h
installer/: cpack-installer-patch.xml
installer/assets/debug_menu/adhoc/FontShader/: debugFont_ps.ppo  debugFont_vs.vpo
installer/assets/debug_menu/font/: TalkFont24.ccm  dbgfont14h.tpf
installer/assets/debug_menu/paramdef/: paramdef.paramdefbnd.dcx
installer/assets/debug_menu/stayparamdef/: stayparamdef.parambnd.dcx
installer/assets/debug_menu/testdata/signboard/: testsignboard.pwt
installer/fragments/: modengine-settings.wxs
installer/resources/: LICENSE.txt
launcher/: CMakeLists.txt  launcher.cpp  steam_app_path.cpp  steam_app_path.h
src/: CMakeLists.txt  MINT.h  main.cpp
src/dantelion/: BND4.h  panic.h
src/gametypes/: class.h
src/gametypes/dantelion/: dlstring.h  dlthread.h
src/kiero/: kiero.cpp  kiero.h
src/modengine/: crash_handler.cpp  crash_handler.h  extension.cpp  extension.h  extension_set.cpp  extension_set.h  game_info.cpp  game_info.h  game_type.h  hook_set.cpp  hook_set.h  lifecycle.cpp  lifecycle.h  logger.cpp  logging.cpp  logging.h  memory_scanner.cpp  memory_scanner.h  mod_engine.cpp  mod_engine.h  overlay.cpp  overlay.h  patch.cpp  patch.h  script_host.cpp  script_host.h  settings.cpp  settings.h  settings_loader.cpp  settings_loader.h  version.cpp  version.h
src/modengine/base/: allocator_table.cpp  allocator_table.h  archive_file_overrides.cpp  archive_file_overrides.h  dinput_hook.cpp  dinput_hook.h  entry.cpp  entry.h  scylla_suspend.cpp  scylla_suspend.h  scyllahide_inject.cpp  scyllahide_inject.h  winsockets_disable.cpp  winsockets_disable.h
src/modengine/debugmenu/ds3/: _DS3BootMenu.asm  debug_menu_ds3.cpp  debug_menu_ds3.h
src/modengine/ext/: crash_handler_extension.cpp  crash_handler_extension.h  profiling_extension.cpp  profiling_extension.h
src/modengine/ext/base/: base_extension.cpp  base_extension.h
src/modengine/ext/crash_handler/: crash_handler_extension.cpp  crash_handler_extension.h
src/modengine/ext/debug_menu/ds3/: _DS3Debug.asm  _DS3DebugDash.asm  _DS3GameProperties.asm  debug_menu_ds3.cpp  debug_menu_ds3.h
src/modengine/ext/grpc_server/: grpc_server_extension.cpp  grpc_server_extension.h
src/modengine/ext/matchmaking/: matchmaking_extension.cpp  matchmaking_extension.h  matchmaking_protobuf_vtables.h
src/modengine/ext/mod_loader/: archive_file_overrides.cpp  archive_file_overrides.h  mod_loader_extension.cpp  mod_loader_extension.h  wwise_file_overrides.cpp  wwise_file_overrides.h
src/modengine/ext/profiling/: main_loop.cpp  main_loop.h  profiler_trampoline.asm  profiling_extension.cpp  profiling_extension.h  thread_hooks.cpp  thread_hooks.h
src/modengine/ext/scylla/: scyllahide_extension.cpp  scyllahide_extension.h
src/modengine/hooks/: anti_debug.cpp  anti_debug.h  archive_file_overrides.cpp  direct_input.cpp  direct_input.h
src/modengine/lifecycle/: render.cpp  render.h
src/modengine/scripting/: api.h  api_patch.cpp  api_player.cpp
src/modengine/util/: hex_string.cpp  hex_string.h  platform.cpp  platform.h
src/proto/: Frpg2RequestMessage.proto
tools/: .gitignore  setup-scylla.ps1
